--- a/src/app/Components/experience/experience.component.html
+++ b/src/app/Components/experience/experience.component.html
@@ -1,6 +1,6 @@
 <h1 class="section-title text-center mb-5" style="padding-top: 120px;">My Experience</h1>
 
-<section class="experience-section" data-aos="fade-up">
+<section class="experience-section card" data-aos="fade-up">
     <div class="exp-company-info">
         <i class="fas fa-building"></i>
         <h3>Zestorm Technologies Pvt. Ltd.</h3>
