--- a/src/app/Components/experience/experience.component.scss
+++ b/src/app/Components/experience/experience.component.scss
@@ -10,6 +10,7 @@
     background: linear-gradient(135deg, #003a4e, #007f8b);
     color: white;
     text-align: center;
+    border-radius: 10px;
 }
 
 .exp-company-info {
