--- a/src/app/Components/about/about.component.html
+++ b/src/app/Components/about/about.component.html
@@ -1,6 +1,6 @@
 <h1 class="section-title" style="padding-top: 120px;">About Me</h1>
 
-<div class="row pt-4">
+<div class="row padding pt-4 pb-5">
     <div class="col-xl-3 col-md-6 mb-4" *ngFor="let item of aboutCards" data-aos="fade-up" data-aos-duration="1000"
         data-aos-once="false">
         <div class="card h-100 shadow-card">
