--- a/src/app/Components/skills/skills.component.html
+++ b/src/app/Components/skills/skills.component.html
@@ -1,6 +1,5 @@
-<h1 class="section-title text-center mb-5" style="padding-top: 120px;">My Skills</h1>
-
 <section class="skills-section card py-5 text-white" data-aos="fade-up">
+    <h1 class="section-title text-center mb-5">My Skills</h1>
     <div class="container">
         <h3 class="text-center mb-5" style="font-weight: 600 !important;">Tools & Technologies</h3>
 
