--- a/src/app/Components/about/about.component.scss
+++ b/src/app/Components/about/about.component.scss
@@ -5,6 +5,10 @@
     margin-bottom: 2rem;
 }
 
+.skills-section {
+    background: linear-gradient(135deg, #002f3f, #00565f);
+}
+
 .shadow-card {
     background-color: #172135;
     color: white;
