--- a/src/app/Components/contact/contact.component.html
+++ b/src/app/Components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section class="contact-section" id="contact">
+<section class="contact-section card" id="contact" style="border-radius: 20px 20px 0px 0px;">
     <h1 class="section-title text-center mb-5">Contact Me</h1>
 
     <div class="contact-cards-container">
