--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -5,7 +5,7 @@
             <img src="./assets/files/Logo.png" alt="" width="200">
             Welcome to SK'S world !
         </div>
-        <ul class="nav-links">
+        <ul class="nav-links d-none d-lg-flex">
             <li><a (click)="scrollToSection('about')">About</a></li>
             <li><a (click)="scrollToSection('skills')">Skills</a></li>
             <li><a (click)="scrollToSection('experience')">Experience</a></li>
@@ -32,15 +32,16 @@
                 <h3 class="mb-5">And I'm a <span class="highlight">Frontend Developer</span></h3>
 
                 <div class="socials">
-                    <a href="tel:+917276340501">
-                        <i class="fas fa-phone-alt" style="font-size: 20px;"></i>
-                    </a>
                     <a href="mailto:shantanukanade2@gmail.com">
                         <i class="fas fa-envelope" style="font-size: 23px;"></i>
                     </a>
                     <a href="https://www.linkedin.com/in/shantanukanade-sk?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
                         target="_blank">
                         <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="tel:+917276340501">
+                        <i class="fas fa-phone" style="font-size: 20px;position: relative;
+                            top: -1px;"></i>
                     </a>
                 </div>
 
@@ -57,11 +58,11 @@
 </div>
 
 
-<div class="text-center pt-5 pb-5" id="about" data-aos="fade-up" class="my-section">
+<div class="padding text-center pt-5 pb-5" id="about" data-aos="fade-up">
     <app-about></app-about>
 </div>
 
-<div class="padding text-center pt-5 pb-5" id="skills" data-aos="fade-up">
+<div class="padding text-center pt-5 pb-5" id="skills" data-aos="fade-up" style="padding-top: 120px !important;">
     <app-skills></app-skills>
 </div>
 
@@ -69,7 +70,7 @@
     <app-experience></app-experience>
 </div>
 
-<div class="padding text-center pt-5 pb-5" id="contact" data-aos="fade-up">
+<div class="padding text-center pt-5" id="contact" data-aos="fade-up">
     <app-contact></app-contact>
 </div>
 
