--- a/src/app/Components/about/about.component.html
+++ b/src/app/Components/about/about.component.html
@@ -1,13 +1,15 @@
-<h1 class="section-title" style="padding-top: 120px;">About Me</h1>
+<h1 class="section-title" style="padding-top: 120px;" data-aos="fade-up">About Me</h1>
 
-<div class="row padding pt-4 pb-5">
-    <div class="col-xl-3 col-md-6 mb-4" *ngFor="let item of aboutCards" data-aos="fade-up" data-aos-duration="1000"
-        data-aos-once="false">
-        <div class="card h-100 shadow-card">
-            <div class="card-body text-center">
-                <i class="{{ item.icon }} card-icon mb-3"></i>
-                <p>{{ item.text }}</p>
+<section class="skills-section padding card py-5 text-white" data-aos="fade-up">
+    <div class="row pt-4 pb-5">
+        <div class="col-xl-3 col-md-6 mb-4 p-3" *ngFor="let item of aboutCards" data-aos="fade-up"
+            data-aos-duration="1000" data-aos-once="false">
+            <div class="card h-100 shadow-card">
+                <div class="card-body text-center">
+                    <i class="{{ item.icon }} card-icon mb-3"></i>
+                    <p>{{ item.text }}</p>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</section>
