--- a/src/app/Components/skills/skills.component.scss
+++ b/src/app/Components/skills/skills.component.scss
@@ -40,15 +40,52 @@
 
         .flip-front {
             background-color: #111;
-            color: white;
-            flex-direction: column;
+            color: rgba(235, 235, 235, 0.918);
+            flex-direction: row !important;
+            padding: 0 1rem;
         }
 
         .flip-back {
-            background-color: #00f2ff;
-            color: #000;
+            background-color: #00353a;
+            color: #dddddd;
             transform: rotateY(180deg);
         }
+
+        .skill-title {
+            font-weight: 700;
+            font-size: 1.5rem;
+            text-align: left;
+            flex: 1;
+        }
+
+        .tool-icon-big {
+            font-size: 4rem;
+            /* Smaller default size */
+            max-width: 100%;
+            max-height: 100%;
+            height: auto;
+            width: auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0.2;
+            overflow: hidden;
+            flex-shrink: 1;
+        }
+
+        @media (max-width: 768px) {
+            .tool-icon-big {
+                font-size: 3rem;
+            }
+        }
+
+        @media (max-width: 576px) {
+            .tool-icon-big {
+                font-size: 2rem;
+            }
+        }
+
+
 
         .tool-icon {
             font-size: 2rem;
