--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    max-width: 100vw;
 }
 
 html {
@@ -18,10 +19,6 @@ body {
     min-height: 100vh;
 }
 
-.padding {
-    padding: 0 40px;
-}
-
 @keyframes gradientBG {
     0% {
         background-position: 0% 50%;
@@ -34,6 +31,11 @@ body {
     100% {
         background-position: 0% 50%;
     }
+}
+
+.row {
+    --bs-gutter-x: 0 !important;
+    --bs-gutter-y: 0 !important;
 }
 
 /* Shared styles */
@@ -132,4 +134,15 @@ body {
     background-color: #181b2e;
     color: white;
     border-radius: 20px;
+    border: none !important;
+}
+
+.padding {
+    padding: 0 40px;
+}
+
+@media (max-width: 576px) {
+    .padding {
+        padding: 0px;
+    }
 }
