--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -24,7 +24,7 @@
     </ul> -->
     </nav>
 
-    <div class="hero mb-5 animate__animated animate__fadeInUp" data-aos="fade-up">
+    <div class="hero mb-5 animate__animated animate__fadeInUp">
         <div class="futuristic-card glow-pulse text-center">
             <div class="hero-text animate__animated animate__fadeInDown">
                 <h4 class="mb-3 mt-2">Hello, It's Me</h4>
