--- a/src/app/Components/projects/projects.component.html
+++ b/src/app/Components/projects/projects.component.html
@@ -1,6 +1,6 @@
 <h1 class="section-title text-center mb-5" style="padding-top: 120px;">My Projects</h1>
 
-<section class="skills-section card py-5 text-white" data-aos="fade-up">
+<section class="skills-section card py-5 text-white">
 
     <div class="projects-grid">
         <div class="project-card" *ngFor="let project of projects">
