--- a/src/app/Components/about/about.component.html
+++ b/src/app/Components/about/about.component.html
@@ -1,9 +1,8 @@
-<h1 class="section-title" style="padding-top: 120px;" data-aos="fade-up">About Me</h1>
+<h1 class="section-title" style="padding-top: 120px;">About Me</h1>
 
-<section class="skills-section padding card py-5 text-white" data-aos="fade-up">
+<section class="skills-section padding card py-5 text-white">
     <div class="row pt-4 pb-5">
-        <div class="col-xl-3 col-md-6 mb-4 p-3" *ngFor="let item of aboutCards" data-aos="fade-up"
-            data-aos-duration="1000" data-aos-once="false">
+        <div class="col-xl-3 col-md-6 mb-4 p-3" *ngFor="let item of aboutCards">
             <div class="card h-100 shadow-card">
                 <div class="card-body text-center">
                     <i class="{{ item.icon }} card-icon mb-3"></i>
