--- a/src/app/Components/skills/skills.component.html
+++ b/src/app/Components/skills/skills.component.html
@@ -1,11 +1,11 @@
-<section class="skills-section card py-5 text-white" data-aos="fade-up">
+<section class="skills-section card py-5 text-white">
     <h1 class="section-title text-center mb-5">My Skills</h1>
     <div class="container">
         <h3 class="text-center mb-5" style="font-weight: 600 !important;">Tools & Technologies</h3>
 
         <div class="row justify-content-center">
-            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-6 mb-4 p-3" *ngFor="let tool of tools"
-                data-aos="flip-left" data-aos-delay="150">
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-12 mb-4 p-xl-3 p-lg-3 p-md-3"
+                *ngFor="let tool of tools">
                 <div class="flip-card glass-card">
                     <div class="flip-inner">
                         <div class="flip-front d-flex justify-content-between align-items-center px-3">
