--- a/src/app/Components/experience/experience.component.scss
+++ b/src/app/Components/experience/experience.component.scss
@@ -13,11 +13,6 @@
     border-radius: 20px;
 }
 
-.exp-company-info {
-    margin-bottom: 3rem;
-    color: #ffffff;
-}
-
 .exp-company-info i {
     font-size: 2rem;
     color: #00f0ff;
@@ -35,11 +30,60 @@
     font-size: 1rem;
 }
 
+/* 🌐 Web View: Show on screen width > 500px */
+@media (min-width: 501px) {
+    .exp-card {
+        background-color: #172135;
+        padding: 1.5rem;
+        border-radius: 20px;
+        color: #eee;
+        text-align: center;
+        box-shadow: 0 0 20px rgba(0, 255, 255, 0.1);
+        transition: transform 0.3s ease;
+    }
+
+    .exp-card:hover {
+        transform: scale(1.05);
+    }
+
+    .exp-company-info {
+        margin-bottom: 3rem;
+        color: #ffffff;
+    }
+}
+
+/* 📱 Mobile View: Show on screen width <= 500px */
+@media (max-width: 500px) {
+    .exp-card {
+        color: #eee;
+        text-align: left;
+    }
+
+    .exp-company-info {
+        margin-bottom: 4rem;
+        color: #ffffff;
+    }
+}
+
+
+
 .exp-cards-container {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
     justify-items: center;
+}
+
+@media (max-width: 400px) {
+
+    .exp-card {
+        color: #eee;
+        text-align: center;
+    }
+
+    .exp-cards-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -56,19 +100,8 @@
     }
 }
 
-.exp-card {
-    background-color: #0e1a2b;
-    padding: 1.5rem;
-    border-radius: 20px;
-    color: #eee;
-    text-align: center;
-    box-shadow: 0 0 20px rgba(0, 255, 255, 0.1);
-    transition: transform 0.3s ease;
-}
 
-.exp-card:hover {
-    transform: scale(1.05);
-}
+
 
 .exp-card i {
     font-size: 1.8rem;
