--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -62,7 +62,7 @@
     <app-about></app-about>
 </div>
 
-<div class="padding text-center pt-5 pb-5" id="skills" data-aos="fade-up" style="padding-top: 120px !important;">
+<div class="padding text-center pt-5 pb-5 paddingTop" id="skills" data-aos="fade-up">
     <app-skills></app-skills>
 </div>
 
