--- a/src/app/Components/contact/contact.component.html
+++ b/src/app/Components/contact/contact.component.html
@@ -1,9 +1,9 @@
 <section class="contact-section card" id="contact" style="border-radius: 20px 20px 0px 0px;">
-    <h1 class="section-title text-center mb-5">Contact Me</h1>
+    <h1 class="section-title text-center mb-5 marginBottom">Contact Me</h1>
 
     <div class="contact-cards-container">
         <div class="contact-card">
-            <i class="fas fa-phone-alt"></i>
+            <i class="fas fa-phone"></i>
             <h4>Phone</h4>
             <p>+91 7276340501</p>
         </div>
