--- a/src/app/Components/skills/skills.component.html
+++ b/src/app/Components/skills/skills.component.html
@@ -1,4 +1,4 @@
-<section class="skills-section card py-5 text-white">
+<section class="skills-section card py-5 text-white WebView">
     <h1 class="section-title text-center mb-5">My Skills</h1>
     <div class="container">
         <h3 class="text-center mb-5" style="font-weight: 600 !important;">Tools & Technologies</h3>
@@ -24,6 +24,27 @@
                                     <strong> {{ tool.proficiency }}%</strong>
                                 </p>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="skills-section card py-5 text-white PhoneView">
+    <h1 class="section-title text-center mb-5">My Skills</h1>
+    <div class="container p-3 pt-0 pb-0">
+        <h3 class="text-center mb-5" style="font-weight: 600 !important;">Tools & Technologies</h3>
+
+        <div class="row justify-content-center">
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-12 mb-4 p-xl-3 p-lg-3 p-md-3">
+                <div class="glass-card" style="
+                     color: rgba(235, 235, 235, 0.918);border-radius: 20px;">
+                    <div class="card-body" *ngFor="let tool of tools">
+                        <div class="flip-front d-flex justify-content-between align-items-center px-3">
+                            <h4 class="skill-title m-0" style="font-size: 18px !important">{{ tool.name }}</h4>
+                            <i class="bi {{ tool.icon }} tool-icon-big"></i>
                         </div>
                     </div>
                 </div>
