--- a/src/app/Components/skills/skills.component.scss
+++ b/src/app/Components/skills/skills.component.scss
@@ -108,3 +108,35 @@
     background-image: linear-gradient(45deg, #00f2ff, #006dff);
     box-shadow: 0 0 5px #00f2ff;
 }
+
+
+
+
+/* 🌐 Web View: Show on screen width > 500px */
+@media (min-width: 501px) {
+    .PhoneView {
+        display: none !important;
+    }
+}
+
+/* 📱 Mobile View: Show on screen width <= 500px */
+@media (max-width: 500px) {
+    .WebView {
+        display: none !important;
+    }
+
+    .tool-icon-big {
+        font-size: 2rem;
+        /* Smaller default size */
+        max-width: 100%;
+        max-height: 100%;
+        height: auto;
+        width: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 1;
+        overflow: hidden;
+        flex-shrink: 1;
+    }
+}
