--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -31,17 +31,17 @@
                 <h1>Shantanu Kanade</h1>
                 <h3 class="mb-5">And I'm a <span class="highlight">Frontend Developer</span></h3>
 
-                <div class="socials">
-                    <a href="mailto:shantanukanade2@gmail.com">
-                        <i class="fas fa-envelope" style="font-size: 23px;"></i>
+                <div class="socials" aria-label="Contact Links">
+                    <a href="mailto:shantanukanade2@gmail.com" aria-label="Send email to Shantanu Kanade">
+                        <i class="fas fa-envelope" style="font-size: 23px;" aria-hidden="true"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/shantanukanade-sk?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-                        target="_blank">
-                        <i class="fab fa-linkedin-in"></i>
+                    <a href="https://www.linkedin.com/in/shantanukanade-sk" target="_blank" rel="noopener noreferrer"
+                        aria-label="Visit LinkedIn profile of Shantanu Kanade">
+                        <i class="fab fa-linkedin-in" style="font-size: 23px;" aria-hidden="true"></i>
                     </a>
-                    <a href="tel:+917276340501">
-                        <i class="fas fa-phone" style="font-size: 20px;position: relative;
-                            top: -1px;"></i>
+                    <a href="tel:+917276340501" aria-label="Call Shantanu Kanade">
+                        <i class="fas fa-phone" style="font-size: 20px; position: relative; top: -1px;"
+                            aria-hidden="true"></i>
                     </a>
                 </div>
 
